--- a/AWST/MidtermActs/MidtermActivity1/assets/css/style.css
+++ b/AWST/MidtermActs/MidtermActivity1/assets/css/style.css
@@ -9,6 +9,7 @@
 }
 .costum-border{
     border-bottom: 2px solid #31241e;
+    background-color: #f6f4f3
 }
 .bg-image{
     background-image: url(../images/home1.jpg);
